  - Propagate errors from FatNode code

0.002003 - 2012-07-25
  - Exclude vendorarch and sitearch from FatNode and ModuleSender
  - Increase default timeout to 10 seconds
  - Add Class::C3 as a dependency since it's required for 5.8 remote nodes
  - SSH options as a separate argument for the SSH connector

0.002002 - 2012-07-23
  - timeouts for connection setup
  - support Object::Remote->start::connect
  - timer support in MiniLoop

0.002001 - 2012-07-18
  - start::, maybe::start:: and next::
  - automatic prompting for sudo passwords
  - allow transfer of glob references
  - allow loading of classes and packages from __DATA__
  - allow transfer of scalar references

0.001001 - 2012-07-12
  - initial release