@@ -1,4 +1,5 @@
   - Propagate errors from FatNode code
+  - Fall back to core non-arch modules in FatNode
 
 0.002003 - 2012-07-25
   - Exclude vendorarch and sitearch from FatNode and ModuleSender
